--- a/application/modules/default/views/scripts/logout/logout.phtml
+++ b/application/modules/default/views/scripts/logout/logout.phtml
@@ -3,7 +3,7 @@
 <head>
     <script>
         function loadComplete(){
-            document.location.herf = <?= $this->redirect ?>;
+            document.location.herf = "<?= $this->redirect ?>";
         }
     </script>
 </head>
