--- a/application/modules/default/views/scripts/logout/logout.phtml
+++ b/application/modules/default/views/scripts/logout/logout.phtml
@@ -14,11 +14,11 @@
 <?php
 $config = Zend_Registry::get('config')->settings->domain;
 ?>
-    <img src="//<?=$config->openid->host?>/logout" style="display:none;" />
-    <img src="//<?=$config->opencode->host?>/users/sign_out" style="display:none;" />
-    <img src="//<?=$config->opencode->host?>/external/removedata.php" style="display:none;" />
-    <img src="//<?=$config->forum->host?>/session/logout" style="display:none;" />
-    <img src="//<?=$config->forum->host?>:8443/removedata.php" style="display:none;" />
+    <img src="https://<?=$config->openid->host?>/logout" style="display:none;" />
+    <img src="https://<?=$config->opencode->host?>/users/sign_out" style="display:none;" />
+    <img src="https://<?=$config->opencode->host?>/external/removedata.php" style="display:none;" />
+    <img src="https://<?=$config->forum->host?>/session/logout" style="display:none;" />
+    <img src="https://<?=$config->forum->host?>:8443/removedata.php" style="display:none;" />
     
 </body>
 </html>
