--- a/application/modules/default/views/scripts/logout/logout.phtml
+++ b/application/modules/default/views/scripts/logout/logout.phtml
@@ -19,6 +19,7 @@ $config = Zend_Registry::get('config')->settings->domain;
     <img src="https://<?=$config->opencode->host?>/external/removedata.php" style="display:none;" />
     <img src="https://<?=$config->forum->host?>/session/logout" style="display:none;" />
     <img src="https://<?=$config->forum->host?>:8443/removedata.php" style="display:none;" />
+    <img src="https://<?=$config->base->host?>/external/removedata.php" style="display:none;" />
     
 </body>
 </html>
