--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -24,7 +24,13 @@ $users = $this->newUsers($limit = 216,'created_at','DESC');
 $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : null;
 $this->headMeta()->setName('robots', 'noindex, nofollow');
+
+
+if(isset($this->loginok) && loginok == true) {
+    echo "Please wait...";
+} else {
 ?>
+
   <link href="/theme/flatui/css/bootstrap/social-buttons.css" rel="stylesheet" type="text/css">
   <style>
     .btn-github {
@@ -147,6 +153,10 @@ $this->headMeta()->setName('robots', 'noindex, nofollow');
         }
     })();
 </script>
+
+<?php
+}
+?>
 
 <?php $this->inlineScript()->appendScript(
     '    $(document).ready(function(){
