--- a/application/modules/default/views/scripts/home/redirectme.phtml
+++ b/application/modules/default/views/scripts/home/redirectme.phtml
@@ -3,7 +3,7 @@
 <head>
     <script>
         function loadComplete(){
-            document.location.href = "<?= $this->redirect ?>";
+            //document.location.href = "<?= $this->redirect ?>";
         }
     </script>
 </head>
