--- a/application/modules/default/views/scripts/home/redirectme.phtml
+++ b/application/modules/default/views/scripts/home/redirectme.phtml
@@ -12,6 +12,11 @@
     Please Wait...
 </p>
 <?php
+
+$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
+$url_forum = Zend_Registry::get('config')->settings->client->default->url_forum;
+$url_gitlab = Zend_Registry::get('config')->settings->client->default->url_gitlab;
+
 $getAuthUser = new Default_View_Helper_GetAuthUser();
 $member = $getAuthUser->getAuthUser();
 $phash = null;
