changes for global logout and discourse login

--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -192,7 +192,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                     <img src="/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
                                     <img src="<?= $url_gitlab ?>/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
                                     <img src="<?= $url_forum ?>:8443/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
-                                    <img src="<?= $url_openid ?>/login/session?ltat=<?= $ltat ?>" style="display:none;"/>
+                                    <img src="//<?= $url_openid ?>/login/session?ltat=<?= $ltat ?>" style="display:none;"/>
 
                                     <ul class="menu pull-right">
                                         <li class="link relative profile-menu-container">
