--- a/application/modules/default/views/scripts/home/redirectme.phtml
+++ b/application/modules/default/views/scripts/home/redirectme.phtml
@@ -21,6 +21,7 @@ $config = Zend_Registry::get('config')->settings->domain;
 $getAuthUser = new Default_View_Helper_GetAuthUser();
 $member = $getAuthUser->getAuthUser();
 $phash = null;
+$ltat = '';
 if (Zend_Auth::getInstance()->hasIdentity()) {
     $sess = new Zend_Session_Namespace('ocs_meta');
     $phash = $sess->phash;
@@ -30,7 +31,7 @@ if (Zend_Auth::getInstance()->hasIdentity()) {
 <img src="/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
 <img src="<?= $url_gitlab ?>/external/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
 <img src="<?= $url_forum ?>:8443/setdata.php?id=<?= $member->member_id ?>&name=<?= $member->username ?>&mail=<?= $member->mail ?>&avatar=<?= $member->profile_image_url ?>&phash=<?= $phash ?>" height="0" width="0">
-<img src="<?= $config->openid->host ?>/login/session?ltat=<?= $ltat ?>" style="display:none;" />
+<img src="//<?= $config->openid->host ?>/login/session?ltat=<?= $ltat ?>" style="display:none;" />
 
 </body>
 </html>
