--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -21,15 +21,15 @@
  **/
 ?>
 
-<link href="https://www.opendesktop.cc/theme/react/assets/css/metaheader.css" rel="stylesheet">
+<link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">
 
-<script src="https://www.opendesktop.cc/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-<script src="https://www.opendesktop.cc/theme/flatui/js/lib/bootstrap.min.js" ></script>
-<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react/react.js"></script>
-<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react-dom/react-dom.js"></script>
+<script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
+<script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>
+<script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
+<script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
 <div id="metaheader"></div>
 
-<script src="https://www.opendesktop.cc/home/metamenujs?target=opendesktop" ></script>
+<script src="/home/metamenujs?target=opendesktop" ></script>
 
-<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/metaheader.js"></script>
+<script type="text/javascript" src="/theme/react/metaheader.js"></script>
 
