--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -31,5 +31,5 @@
 
 <script src="/home/metamenujs?target=opendesktop" ></script>
 
-<script type="text/javascript" src="/theme/react/metaheader.js"></script>
+<!--<script type="text/javascript" src="/theme/react/metaheader.js"></script>-->
 
