--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -20,7 +20,7 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
-
+<!--
 <link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">
 
 <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
@@ -31,5 +31,5 @@
 
 <script src="/home/metamenujs?target=opendesktop" ></script>
 
-<!--<script type="text/javascript" src="/theme/react/metaheader.js"></script>-->
+<script type="text/javascript" src="/theme/react/metaheader.js"></script>-->
 
