--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -22,8 +22,8 @@
 ?>
 <link href="/theme/react/assets/css/metaheader.css" rel="stylesheet">
 
-<script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-<script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>
+<!--<script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>-->
+<!--<script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>-->
 <script type="text/javascript" src="/theme/react/lib/react/react.js"></script>
 <script type="text/javascript" src="/theme/react/lib/react-dom/react-dom.js"></script>
 <div id="metaheader"></div>
