--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -244,7 +244,9 @@ body {
                         height: 24px;
                         line-height: 24px;
                         a {
-                          padding: 3px 30px;
+                          padding: 0px 30px;
+                          display: block;
+                          width: 100%;
                         }
                         &:hover {
                           background-color: #eee;
