--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -247,6 +247,8 @@ body {
                           padding: 0px 30px;
                           display: block;
                           width: 100%;
+                          height: 24px;
+                          line-height: 24px;
                         }
                         &:hover {
                           background-color: #eee;
